fix overflow error

--- a/styles/style.css
+++ b/styles/style.css
@@ -77,9 +77,9 @@
 	display: flex;
 	justify-content: center;
 	flex-direction: column;
-	padding: 0 100px;
+	padding: 20 100px;
 	margin: 0 auto;
-	height: 90vh;
+	min-height: 90vh;
 	max-width: 1000px;
 }
 .banner .bi {
